@@ -22,6 +22,7 @@
 15. Fix crash in context view if song tracks changed quickly.
 16. Better method of setting disabled opacity for monochrome icons.
 17. Fix parsing of podcast RSS files containing "content" tag.
+18. Set user-agent for podcast URL queries, otherwise requests can fail.
 
 1.4.1
 -----
